# snippers

./: .env  Cargo.toml  README.md
migrations/2020-04-17-172405_create_snippets/: up.sql
src/: actions.rs  main.rs  models.rs
