[package]
name = "snippers"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"

env_logger = "0.7"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"